<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="introduction_text">Tap a movie to see its details!</string>
    <string name="orderby">Order by:</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="no_connection_alert">No connections are available at the moment, please check your connection status, then try again.</string>
    <string name="no_favourites_alert">You didn\'t add any movie yet!\n\nYou can go back to movie list, then choosing your favourite movie. If you click on the star, the movie will immediately became your favourite!</string>
    <string name="release_date_label">Release date:</string>
    <string name="rate_label">Vote average:</string>
    <string name="plot">Plot:</string>
    <string name="favourites">Favourites movies</string>
    <string name="added_to_favourites">added to favourites!</string>
    <string name="removed_from_favourites">removed from favourites!</string>
    <string name="details_trailers_label">Movie trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="review_by">Review by</string>
    <string name="full_review">Full review available here</string>
    <string name="add_to_favourites">Add to favourites:</string>
    <string name="no_connection_alert_favourites">..but you can still check your favourite movies, if you added any...</string>
</resources>
