<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:orderInCategory="10"
    android:title="@string/orderby" />
    <group android:id="@+id/menu_orderby" android:checkableBehavior="single">
        <item
            android:id="@+id/orderby_popular"
            android:orderInCategory="20"
            android:title="@string/most_popular"
            app:showAsAction="never"
            android:checked="true"/>
        <item
            android:id="@+id/orderby_toprated"
            android:orderInCategory="30"
            android:title="@string/top_rated"
            app:showAsAction="never"/>
    </group>
    <group>
        <item android:title="_________________________" android:orderInCategory="35"></item>
        <item
            android:id="@+id/show_favourites"
            android:orderInCategory="40"
            android:title="@string/favourites"
            app:showAsAction="never"/>
    </group>
</menu>