<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/no_connection_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_connection_alert"
        android:gravity="center"
        android:padding="40dp"
        android:textSize="22dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_favourites_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_favourites_alert"
        android:gravity="center"
        android:padding="40dp"
        android:textSize="18dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_text"
        android:layout_margin="6dp"
        android:visibility="invisible"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>